--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "test:watch": ""
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.20",
+    "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.7",
